# quaestor

./: .dockerignore  .env  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLA.md  CONTRIBUTING.md  Dockerfile  FEATURE_IDEAS.md  LICENSE  README.md  Taskfile.yml  alembic.ini  cleanup_db.sh  docker-compose.yaml  idea_for_frontend.md  pyproject.toml  testing.py  testing.sh
.github/: dependabot.yml
.github/workflows/: check-version.yml  dependabot-auto-merge.yml  lint.yml  pre-commit-autoupdate.yml  publish-docs.yml  release.yml  tests.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_modifytable_accounts.py
docs/: ideas_for_the_future.md
docs/bank_handlers/: README.md  dfs.md  enable_banking.md  fin4u.md  fints.md  fints_vs_enable_banking.md  manual.md  trade_republic.md
scripts/: check_i18n.py  check_transaction_category_mapping.py  cleanup_db.sh  copy_prod_db_to_local.py  db.sh  dump_bank_catalog.py  dump_openapi.py  fill_db_with_testdata.py  resetpw.sh  rotate_db_encryption_key.py  rotate_encryption_key.py  testing.py
scripts/checks/: check_i18n.py  check_transaction_category_mapping.py  generate_frontend_categories.py
scripts/db/: copy_prod_db_to_local.py  db.sh  db_common.sh  fill_db_with_testdata.py  get_uncategorized_transactions.sh  resetpw.sh  rotate_db_encryption_key.py
scripts/docs/: dump_bank_catalog.py  dump_openapi.py
source/: crypto.py  db.py  exceptions.py  main.py
source/api/: _create_router.py  accounts.py  application_secrets.py  application_settings.py  auth.py  credentials.py  exception_handlers.py  schemas.py  users.py
source/api/schemas/: account.py  credential.py  user.py
source/backend/: constants.py  csrf.py  db.py  exceptions.py  helpers.py  logging_utils.py  main.py  paths.py  rate_limit.py  rest_api_client.py  server.py
source/backend/alembic/: env.py
source/backend/api/: account.py  account_groups.py  api_keys.py  application_secrets.py  application_settings.py  auth.py  contracts.py  create_router.py  credentials.py  exception_handlers.py  helpers.py  i18n.py  notification_rules.py  openapi.py  push.py  settings.py  statistics.py  transactions.py  users.py  version.py
source/backend/bank_handlers/: __init__.py  bank_logos.py  base.py  dfs_handler.py  enable_banking_handler.py  fin4u_handler.py  fints_handler.py  manual_handler.py  sparkasse_handler.py  trade_republic.py
source/backend/models/: account.py  account_balance_snapshot.py  account_group.py  api_key.py  application_secret.py  application_settings.py  backup_code.py  base.py  contract.py  contract_assignment.py  contract_frequency.py  contract_source.py  credential.py  notification_rule.py  push_subscription.py  recurring_transaction.py  session.py  user.py  (+4 more)
source/bank_handlers/: __init__.py  base.py  dfs_handler.py  fints_handler.py  ing.py  trade_republic.py
source/frontend/: .gitignore  .prettierignore  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsr.config.json  vite.config.ts  vitest.config.ts
source/models/: __init__.py  account.py  application_secret.py  application_settings.py  credential.py  session.py  transaction.py  types.py  user.py
source/services/: account_service.py  application_secret_service.py  application_setting_service.py  credential_service.py  password_service.py  session_service.py  trade_republic_login.py  transaction_service.py  user_service.py
tests/: README.md  test_e2e.py
tests/backend/: conftest.py  test_category_rescan.py  test_db.py  test_e2e.py  test_frontend_dist_resolution.py  test_helpers.py  test_lifespan.py  test_logging.py  test_main.py  test_paths.py  test_playwright_browser.py  test_rate_limit.py  test_recurring_scheduler.py  test_rest_api_client.py  test_server.py  test_session_cookie_caching.py  test_startup.py  test_sync_scheduler.py  test_version_api.py  test_version_service.py
(+500 files in other folders)
