[tool.poetry]
name = "Finanzguru Clone"
version = "0.0.1"
description = "A selfhosted clone of finanzguru"
authors = ["Felix Schneider <mail@fschneider.me>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
sqlalchemy = "^2.0.49"
fastapi = "^0.136.1"
pydantic = "^2.13.4"
alembic = "^1.18.4"
uvicorn = ">=0.46,<0.48"
sqlcipher3 = ">=0.5.4,<0.7.0"
python-dotenv = "^1.2.2"
requests = "^2.33.1"
fints = "^5.0.0"
pytr = "^0.4.9"
argon2-cffi = "^25.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
httpx = "^0.28.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests/test_e2e.py"]
skips = ["B101"]