[tool.poetry]
name = "Quaestor"
description = "Your self-hosted, read-only treasurer: a personal finance overview across all your bank accounts"
version = "0.1.26"
authors = ["Felix Schneider <mail@fschneider.me>"]
repository = "https://github.com/felixschndr/quaestor"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
sqlalchemy = "^2.0.49"
fastapi = "^0.136.1"
pydantic = "^2.13.4"
alembic = "^1.18.4"
uvicorn = ">=0.46,<0.49"
sqlcipher3 = ">=0.5.4,<0.7.0"
python-dotenv = "^1.2.2"
requests = "^2.33.1"
fints = "^5.0.0"
fints-url = "^0.7"
pytr = "^0.4.9"
argon2-cffi = "^25.1.0"
pyotp = "^2.9.0"
segno = "^1.6.6"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
httpx = "^0.28.1"
pytest-cov = "^7.1.0"
pytest-env = "^1.6.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
addopts = ["--import-mode=importlib"]
env = [
    "R:ALLOW_MISSING_FRONTEND=true", # R = don't override pre-existing env
    "R:LOG_LEVEL=WARNING",
]
markers = ["real_playwright_browser: exercise the real Playwright browser provisioning logic"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.bandit]
exclude_dirs = [".venv", "tests/test_e2e.py"]
skips = ["B101"]
