[tool.poetry]
name = "Quaestor"
description = "Your self-hosted, read-only treasurer: a personal finance overview across all your bank accounts"
version = "0.1.68"
authors = ["Felix Schneider <mail@fschneider.me>"]
repository = "https://github.com/felixschndr/quaestor"
package-mode = false

[tool.poetry.dependencies]
python = "^3.14"
sqlalchemy = "^2.0.51"
fastapi = "^0.139.0"
pydantic = "^2.13.4"
alembic = "^1.18.5"
uvicorn = ">=0.51.0,<0.52"
sqlcipher3 = ">=0.5.4,<0.7.0"
python-dotenv = "^1.2.2"
requests = "^2.33.1"
fints = "^5.0.0"
fints-url = "^0.7"
# Pinned: mt-940 5.0.0 remaps :86: subfield ?31 from applicant_iban to applicant_name, prepending the
# counterparty IBAN to other_party. That breaks transaction dedup (key includes other_party) and creates
# duplicate bookings. fints declares mt-940 unpinned, so we cap it here until the regression is fixed upstream.
mt-940 = "4.30.0"
pytr = "^0.4.9"
argon2-cffi = "^25.1.0"
pyotp = "^2.10.0"
segno = "^1.6.6"
pywebpush = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.1.1"
httpx = "^0.28.1"
pytest-cov = "^7.1.0"
pytest-env = "^1.6.0"
watchfiles = "^1.2.0"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
    'ignore:Using `httpx` with `starlette\.testclient` is deprecated:UserWarning',
]
addopts = ["--import-mode=importlib"]
log_level = "INFO"
env = [
    "R:ALLOW_MISSING_FRONTEND=true", # R = don't override pre-existing env
    "R:LOG_LEVEL=WARNING",
]
markers = ["real_playwright_browser: exercise the real Playwright browser provisioning logic"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.bandit]
exclude_dirs = [".venv"]
skips = ["B101"]
